# granite-tools

./: .gitignore  CHANGELOG.md  DEV.md  README.md  pyproject.toml  pytest.ini
data/: bigram-anchor-scores-raw.json  bigram.scores.json  granite.bigram.compare.pickle  granite.bigram.compare.pickle.json  granite.bigram.ranking  granite.bigram.scoreratios.yml  granite.initial.bigram.ranking  granite.trigram.scoreratios.yml
docs/: compare-pickle-format.md  ngram-frequency-analysis.md  scoring-key-efforts.md
examples/: config.yml  config_numbers.yml  dashboard.config.json  keyseq_effort.yml  keyseq_effort_numbers_mini.yml
granite_tools/: app_types.py  bigram_ranking.py  bigram_ranking_file.py  comparison_data.py  config.py  easy_rolling.py  effort.py  hands.py  order.py  permutations.py  progress.py  scaling.py  score_ratios.py  trigram_features.py  trigram_types.py  unigram_scores.py  utils.py
granite_tools/bigram_compare/: compare_app.py  compare_app.tcss  comparisons.py  fitting.py  merge_data.py  scorer.py
granite_tools/bigram_ranking_initial/: bigram_ranking_initial.py  placement_manager.py  positionbar.py
granite_tools/bigram_ranking_view/: keyseq_table.py  viewer_app.py
granite_tools/bigram_scores/: __init__.py  anchor_scores.py  bigram_scores.py  cli.py  plotting.py  rankings.py  score_ratio_template.py  score_ratios.py  spline_smoothing.py
granite_tools/compare/: compare_app.py  fitting.py  merge_data.py  scorer.py
granite_tools/ngram_tools/: cli.py  ngram.py
granite_tools/ngrams/: cli.py  ngram.py
granite_tools/scorer/: __init__.py  bigram_scores.py  cli.py  data.py  modelparams.py  plotting.py  scorer.py  smooth_scores.py  trigram_creation.py  trigramtype.py
granite_tools/scripts/: bigram_anchor_scores_fit.py  bigram_anchor_scores_plot.py  check_sentence_score.py  check_trigram_scores_plot.py  create_ngram_ranking.py  create_trigram_table.py  cross_validate_model.py  cross_validate_model_thumbs.py  estimate_unigram_scores.py  get_low_bigram_sum_trigrams.py  merge_to_compare_data.py  plot_bigram_scores.py  scoreratios_fit.py  scoreratios_modify.py  scoreratios_plot.py  scoreratios_show_worst_fit.py  smooth_scores.py
granite_tools/scripts/dev/: compare_bigram_scoring_models.py  cross_validate_model.py  cross_validate_model_thumbs.py  estimate_unigram_scores.py  estimate_unigram_scores_from_pickle.py  manual_test_smooth_scores.py  plot_acceptance_limits.py
granite_tools/sort_app/: sort_app.py
granite_tools/textual_widgets/: __init__.py  exit_modal.py  progress.py
granite_tools/trigram_model/: __init__.py  cli.py  data.py  optimizer.py  params.py  plotting.py  scorer.py
granite_tools/viewer/: keyseq_table.py  viewer_app.py
notes/: notes.md
src/granite_tools/: __init__.py  chargram.py  cli.py  ngram.py
tests/: conftest.py  test_bigram_ranking.py  test_chargram.py  test_comparison_data.py  test_create_ngram_ranking.py  test_easy_rolling.py  test_effort.py  test_hands.py  test_ngram.py  test_permutations.py  test_scaling.py  test_score_ratios.py  test_trigram_features.py  test_trigram_types.py  test_unigram_scores.py  test_utils.py
tests/test_bigram_compare/: conftest.py  test_compare_app.py  test_comparisons.py  test_fitting.py  test_merge_data.py  test_scorer.py
tests/test_bigram_ranking_initial/: test_bigram_ranking_initial.py  test_placement_manager.py
tests/test_bigram_ranking_view/: test_keyseqtable.py  test_twowaydict.py  test_viewer_app.py
tests/test_bigram_scores/: test_anchor_scores.py  test_bigram_scores.py  test_score_ratio_template.py
tests/test_compare/: conftest.py  test_compare_app.py  test_comparisons.py  test_fitting.py  test_merge_data.py  test_scorer.py
tests/test_scorer/: test_bigram_scores.py  test_data.py  test_scorer.py  test_trigram_creation.py  test_trigramtype.py
tests/test_sort_app/: test_placement_manager.py  test_sort_app.py
tests/test_trigram_model/: test_data.py  test_optimizer.py  test_params.py  test_scorer.py
tests/test_viewer/: test_keyseqtable.py  test_twowaydict.py  test_viewer_app.py
(+3 files in other folders)
