[project]
name = "granite-tools"
version = "1.0.0"
description = "Program for ranking and scoring character ngrams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "choix>=0.3.5",
    "matplotlib>=3.9.2",
    "plotext>=5.3.2",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "textual>=0.86.1",
    "typer==0.12.5",
]

[project.urls]
Homepage = "https://github.com/fohrloop/granite-tools"
"Source Code" = "https://github.com/fohrloop/granite-tools"
"Issue Tracker" = "https://github.com/fohrloop/granite-tools/issues"

[project.scripts]
ngram_show = "granite_tools.ngrams.cli:cli_show_ngrams"
ngram_compare = "granite_tools.ngrams.cli:cli_compare_ngrams"


[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "textual-dev>=1.6.1",
    "types-pyyaml>=6.0.12.20240917",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]

